# boxboxnow-v2

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  docker-compose.yml
backend/: .env.example  Dockerfile  backfill_race_laps.py  migrate_from_dump.py  migrate_from_mysql.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/apex/: api_client.py  circuit_hub.py  client.py  parser.py  recorder.py  replay.py
backend/app/api/: admin_routes.py  analytics_routes.py  apex_replay_routes.py  auth_routes.py  config_routes.py  gps_routes.py  public_routes.py  race_routes.py  ranking_routes.py  replay_routes.py  stripe_routes.py  tracking_routes.py  usage_routes.py
backend/scripts/: bench_classification.py  ranking_dryrun.py  ranking_sanity.py
backend/tests/: conftest.py  test_admin_plan_i18n.py  test_all_circuit_access_model.py  test_all_grant_enforcement.py  test_all_grant_propagation.py  test_analytics_dedup_laps.py  test_cancel_revokes_all_grant.py  test_checkout_circuits_3col.py  test_circuit_access_multi_row.py  test_circuit_access_resolver.py  test_circuit_flags.py  test_email_verification_flow.py  test_fifo_assign_endpoint.py  test_google_auth_toggle.py  test_grant_all_circuits.py  test_payment_method_delete_guard.py  test_plan_i18n.py  test_plan_i18n_integration.py  test_public_cache.py  test_public_circuits.py  test_rate_limit_hardening.py  test_register_user_preferences.py  test_register_verify_session.py  test_register_verify_trial_integration.py  test_replay_access_control.py  test_reset_password_tz.py  test_security_h2_h5_h7.py  test_start_trial_and_register_no_trial.py  test_tab_backfill_removed.py  test_ws_all_grant.py
ios/: SETUP.md
(+542 files in other folders)
