[project]
name = "boxboxnow"
version = "2.0.0"
description = "Real-time karting race strategy application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "jenkspy>=0.4.0",
    "scikit-learn>=1.4.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.1.0",
    "PyJWT>=2.8.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "stripe>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
